--- a/ai/bot_detection/bot_detection.ipynb
+++ b/ai/bot_detection/bot_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "5964faf2",
    "metadata": {},
    "outputs": [],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ec69741a",
    "metadata": {},
    "outputs": [
@@ -821,51 +821,112 @@
     "            print(f\"Bot events: {df['is_bot'].sum()}\")\n",
     "            print(f\"Human events: {(~df['is_bot']).sum()}\")\n",
     "        \n",
-    "        return df\n",
+    "        return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8e60a6fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating dataset with 1000 users, 1.5% bots...\n",
+      "Generated 15 bot users and 985 human users\n",
+      "Processing user 1/1000...\n",
+      "Processing user 101/1000...\n",
+      "Processing user 201/1000...\n",
+      "Processing user 301/1000...\n",
+      "Processing user 401/1000...\n",
+      "Processing user 501/1000...\n",
+      "Processing user 601/1000...\n",
+      "Processing user 701/1000...\n",
+      "Processing user 801/1000...\n",
+      "Processing user 901/1000...\n",
+      "Generated 4302 total engagement events\n",
+      "Dataset saved to ultimate_bot_detection_dataset.csv\n",
+      "Shape: (4302, 27)\n",
+      "Bot events: 1537\n",
+      "Human events: 2765\n",
+      "\n",
+      "==================================================\n",
+      "DATASET SUMMARY\n",
+      "==================================================\n",
+      "Total events: 4302\n",
+      "Total users: 826\n",
+      "Total videos: 100\n",
+      "Bot events: 1537 (35.7%)\n",
+      "Human events: 2765 (64.3%)\n",
+      "\n",
+      "Bot Types Distribution:\n",
+      "  sophisticated_bot: 407\n",
+      "  crude_bot: 326\n",
+      "  purchased_followers: 312\n",
+      "  coordinated_inauthentic: 291\n",
+      "  compromised_account: 201\n",
+      "\n",
+      "Event Types Distribution:\n",
+      "  view: 3146\n",
+      "  like: 774\n",
+      "  share: 231\n",
+      "  comment: 151\n",
+      "\n",
+      "Content Types Distribution:\n",
+      "  trending_dance: 857\n",
+      "  political_content: 771\n",
+      "  lifestyle: 760\n",
+      "  controversy: 597\n",
+      "  educational: 573\n",
+      "  comedy: 535\n",
+      "  product_review: 209\n"
+     ]
+    }
+   ],
+   "source": [
+    "generator = UltimateBotDatasetGenerator(seed=42)\n",
     "\n",
-    "# Usage example\n",
-    "if __name__ == \"__main__\":\n",
-    "    generator = UltimateBotDatasetGenerator(seed=42)\n",
-    "    \n",
-    "    # Generate a comprehensive dataset\n",
-    "    dataset = generator.generate_dataset(\n",
-    "        num_videos=100,\n",
-    "        num_users=1000,\n",
-    "        bot_fraction=0.015,\n",
-    "        save_to_csv=True,\n",
-    "        filename=\"ultimate_bot_detection_dataset.csv\"\n",
-    "    )\n",
-    "    \n",
-    "    # Display summary statistics\n",
-    "    print(\"\\n\" + \"=\"*50)\n",
-    "    print(\"DATASET SUMMARY\")\n",
-    "    print(\"=\"*50)\n",
-    "    print(f\"Total events: {len(dataset)}\")\n",
-    "    print(f\"Total users: {dataset['user_id'].nunique()}\")\n",
-    "    print(f\"Total videos: {dataset['video_id'].nunique()}\")\n",
-    "    print(f\"Bot events: {dataset['is_bot'].sum()} ({dataset['is_bot'].mean()*100:.1f}%)\")\n",
-    "    print(f\"Human events: {(~dataset['is_bot']).sum()} ({(1-dataset['is_bot'].mean())*100:.1f}%)\")\n",
-    "    \n",
-    "    print(\"\\nBot Types Distribution:\")\n",
-    "    bot_types = dataset[dataset['is_bot']]['bot_type'].value_counts()\n",
-    "    for bot_type, count in bot_types.items():\n",
-    "        print(f\"  {bot_type}: {count}\")\n",
-    "    \n",
-    "    print(\"\\nEvent Types Distribution:\")\n",
-    "    event_types = dataset['event_type'].value_counts()\n",
-    "    for event_type, count in event_types.items():\n",
-    "        print(f\"  {event_type}: {count}\")\n",
-    "    \n",
-    "    print(\"\\nContent Types Distribution:\")\n",
-    "    content_types = dataset['content_type'].value_counts()\n",
-    "    for content_type, count in content_types.items():\n",
-    "        print(f\"  {content_type}: {count}\")"
+    "# Generate a comprehensive dataset\n",
+    "dataset = generator.generate_dataset(\n",
+    "\tnum_videos=100,\n",
+    "\tnum_users=1000,\n",
+    "\tbot_fraction=0.015,\n",
+    "\tsave_to_csv=True,\n",
+    "\tfilename=\"ultimate_bot_detection_dataset.csv\"\n",
+    ")\n",
+    "\n",
+    "# Display summary statistics\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"DATASET SUMMARY\")\n",
+    "print(\"=\"*50)\n",
+    "print(f\"Total events: {len(dataset)}\")\n",
+    "print(f\"Total users: {dataset['user_id'].nunique()}\")\n",
+    "print(f\"Total videos: {dataset['video_id'].nunique()}\")\n",
+    "print(f\"Bot events: {dataset['is_bot'].sum()} ({dataset['is_bot'].mean()*100:.1f}%)\")\n",
+    "print(f\"Human events: {(~dataset['is_bot']).sum()} ({(1-dataset['is_bot'].mean())*100:.1f}%)\")\n",
+    "\n",
+    "print(\"\\nBot Types Distribution:\")\n",
+    "bot_types = dataset[dataset['is_bot']]['bot_type'].value_counts()\n",
+    "for bot_type, count in bot_types.items():\n",
+    "\tprint(f\"  {bot_type}: {count}\")\n",
+    "\n",
+    "print(\"\\nEvent Types Distribution:\")\n",
+    "event_types = dataset['event_type'].value_counts()\n",
+    "for event_type, count in event_types.items():\n",
+    "\tprint(f\"  {event_type}: {count}\")\n",
+    "\n",
+    "print(\"\\nContent Types Distribution:\")\n",
+    "content_types = dataset['content_type'].value_counts()\n",
+    "for content_type, count in content_types.items():\n",
+    "\tprint(f\"  {content_type}: {count}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e60a6fd",
+   "id": "d5880aed",
    "metadata": {},
    "outputs": [],
    "source": []
