bot_user endpoint

--- a/ai/bot_detection/unsprvsed.ipynb
+++ b/ai/bot_detection/unsprvsed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "48a86799",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "afd23bda",
    "metadata": {},
    "outputs": [
@@ -215,24 +215,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset saved to clean_skibidi_dataset.csv, shape=(6127, 18)\n"
+      "Dataset saved to test_skibidi.csv, shape=(6068, 18)\n"
      ]
     }
    ],
    "source": [
     "gen = CleanBotDatasetGenerator()\n",
     "df = gen.generate_dataset(\n",
-    "    num_videos=50, \n",
+    "    num_videos=20, \n",
     "    num_users=1000, \n",
-    "    bot_fraction=0.2, \n",
+    "    bot_fraction=0.1, \n",
     "    save_to_csv=True, \n",
-    "    filename=\"clean_skibidi_dataset.csv\"\n",
+    "    filename=\"test_skibidi.csv\"\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "0d2cec32",
    "metadata": {},
    "outputs": [],
@@ -242,6 +242,8 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.ensemble import RandomForestClassifier, IsolationForest\n",
     "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+    "\n",
+    "df = pd.read_csv(\"clean_skibidi_dataset.csv\")\n",
     "\n",
     "# Assume 'label' column: 1=bot, 0=human\n",
     "X = df.drop(columns=[\"is_bot\", \"event_id\", \"timestamp\", \"user_id\", \"bot_type\", \"ip_address\", \"video_id\", \"creator_id\", \"event_type\"])\n",
@@ -255,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "fb76b8a1",
    "metadata": {},
    "outputs": [],
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "de26c3b9",
    "metadata": {},
    "outputs": [
@@ -312,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "fec66bf8",
    "metadata": {},
    "outputs": [
@@ -321,19 +323,19 @@
      "output_type": "stream",
      "text": [
       "===== Isolation Forest (Unsupervised) =====\n",
-      "Accuracy: 0.8023064250411862\n",
+      "Accuracy: 0.8287112561174551\n",
       "Confusion Matrix:\n",
-      " [[964 240]\n",
-      " [  0  10]]\n",
+      " [[871 114]\n",
+      " [ 96 145]]\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.80      0.89      1204\n",
-      "           1       0.04      1.00      0.08        10\n",
+      "           0       0.90      0.88      0.89       985\n",
+      "           1       0.56      0.60      0.58       241\n",
       "\n",
-      "    accuracy                           0.80      1214\n",
-      "   macro avg       0.52      0.90      0.48      1214\n",
-      "weighted avg       0.99      0.80      0.88      1214\n",
+      "    accuracy                           0.83      1226\n",
+      "   macro avg       0.73      0.74      0.74      1226\n",
+      "weighted avg       0.83      0.83      0.83      1226\n",
       "\n"
      ]
     }
@@ -358,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "a108c7fe",
    "metadata": {},
    "outputs": [
@@ -429,10 +431,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "958c81e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'total_events'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\jeany\\Desktop\\NUS\\Projects\\TikTokJam-2025\\venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mKeyError\u001b[39m: 'total_events'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Feature engineering\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m X[\u001b[33m\"\u001b[39m\u001b[33mevents_per_video\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[43mX\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtotal_events\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m / X[\u001b[33m\"\u001b[39m\u001b[33mnum_videos_engaged\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Scaling\u001b[39;00m\n\u001b[32m      5\u001b[39m scaler = StandardScaler()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\jeany\\Desktop\\NUS\\Projects\\TikTokJam-2025\\venv\\Lib\\site-packages\\pandas\\core\\frame.py:4107\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4105\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4107\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4108\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4109\u001b[39m     indexer = [indexer]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\jeany\\Desktop\\NUS\\Projects\\TikTokJam-2025\\venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+      "\u001b[31mKeyError\u001b[39m: 'total_events'"
+     ]
+    }
+   ],
    "source": [
     "# Feature engineering\n",
     "X[\"events_per_video\"] = X[\"total_events\"] / X[\"num_videos_engaged\"]\n",
@@ -444,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "510d52a3",
    "metadata": {},
    "outputs": [
@@ -509,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "12e9b513",
    "metadata": {},
    "outputs": [],
@@ -545,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "e2746077",
    "metadata": {},
    "outputs": [
@@ -613,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "88d2b65f",
    "metadata": {},
    "outputs": [
@@ -621,13 +645,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jeany\\AppData\\Local\\Temp\\ipykernel_28844\\329958424.py:39: SettingWithCopyWarning: \n",
+      "C:\\Users\\jeany\\AppData\\Local\\Temp\\ipykernel_43772\\1397068953.py:40: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X[\"followers_following_ratio\"] = X[\"followers_count\"] / (X[\"following_count\"] + 1)\n",
-      "C:\\Users\\jeany\\AppData\\Local\\Temp\\ipykernel_28844\\329958424.py:40: SettingWithCopyWarning: \n",
+      "C:\\Users\\jeany\\AppData\\Local\\Temp\\ipykernel_43772\\1397068953.py:41: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -671,6 +695,7 @@
    "source": [
     "from sklearn.metrics import classification_report, confusion_matrix, precision_score, recall_score\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
     "# --- 1. Aggregate per-user features ---\n",
     "def aggregate_per_user(df):\n",
@@ -764,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "7a8526cd",
    "metadata": {},
    "outputs": [],
@@ -801,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "0664e5c7",
    "metadata": {},
    "outputs": [],
@@ -837,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "ec5fc34e",
    "metadata": {},
    "outputs": [],
@@ -851,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "762d94a0",
    "metadata": {},
    "outputs": [
@@ -939,6 +964,20 @@
    "id": "b4e83b21",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "007478f1",
+   "metadata": {},
+   "source": [
+    "### REAL SHIT\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "407585fa",
+   "metadata": {},
    "source": []
   }
  ],
