--- a/ai/video_eval/test.ipynb
+++ b/ai/video_eval/test.ipynb
@@ -3,8 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f45865bd",
-   "metadata": {},
+   "id": "c92181fe",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
    "outputs": [],
    "source": []
   }
