--- a/ai/scripts/generate_sql.ipynb
+++ b/ai/scripts/generate_sql.ipynb
@@ -54,8 +54,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2edcbac7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quality score: 0.56\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "# The Flask server URL\n",
+    "BASE_URL = \"http://127.0.0.1:5000/admin/evaluate-video\"\n",
+    "\n",
+    "# Example video URL\n",
+    "video_url = \"b58c3991_tiktok_7480905344793791762_video.mp4\"\n",
+    "try:\n",
+    "    # Pass the video URL as a query parameter\n",
+    "    response = requests.get(BASE_URL, params={\"video_url\": video_url})\n",
+    "    \n",
+    "    # Check for successful response\n",
+    "    if response.status_code == 200:\n",
+    "        data = response.json()\n",
+    "        print(f\"Quality score: {data.get('quality_score')}\")\n",
+    "        if 'error' in data:\n",
+    "            print(f\"Error: {data['error']}\")\n",
+    "    else:\n",
+    "        print(f\"Request failed with status code: {response.status_code}\")\n",
+    "        print(response.text)\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad292cc7",
    "metadata": {},
    "outputs": [],
    "source": []
