--- a/ai/scripts/generate_sql.ipynb
+++ b/ai/scripts/generate_sql.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "2edcbac7",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quality score: 0.56\n"
+      "Request failed with status code: 400\n",
+      "{\"error\":\"Missing video_url\",\"quality_score\":-1.0}\n",
+      "\n"
      ]
     }
    ],
@@ -76,7 +78,7 @@
     "video_url = \"b58c3991_tiktok_7480905344793791762_video.mp4\"\n",
     "try:\n",
     "    # Pass the video URL as a query parameter\n",
-    "    response = requests.get(BASE_URL, params={\"video_url\": video_url})\n",
+    "    response = requests.get(BASE_URL, params={\"video_id\": video_url})\n",
     "    \n",
     "    # Check for successful response\n",
     "    if response.status_code == 200:\n",
@@ -93,8 +95,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ad292cc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Request failed with status code: 500\n",
+      "{\"error\":\"name 'centroid_categories' is not defined\"}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Flask server URL\n",
+    "BASE_URL = \"http://127.0.0.1:5000/admin/categorize-video\"\n",
+    "video_id = video_url\n",
+    "try:\n",
+    "    # Send GET request with video_id as a query parameter\n",
+    "    response = requests.get(BASE_URL, params={\"video_id\": video_id})\n",
+    "    \n",
+    "    # Check response\n",
+    "    if response.status_code == 200:\n",
+    "        data = response.json()\n",
+    "        print(\"Categorization results:\")\n",
+    "        print(data)\n",
+    "    else:\n",
+    "        print(f\"Request failed with status code: {response.status_code}\")\n",
+    "        print(response.text)\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7993ab0",
    "metadata": {},
    "outputs": [],
    "source": []
