fix centroid naming bug

--- a/ai/scripts/generate_sql.ipynb
+++ b/ai/scripts/generate_sql.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "2edcbac7",
    "metadata": {},
    "outputs": [
@@ -62,9 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Request failed with status code: 400\n",
-      "{\"error\":\"Missing video_url\",\"quality_score\":-1.0}\n",
-      "\n"
+      "Quality score: 0.6\n"
      ]
     }
    ],
@@ -95,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "ad292cc7",
    "metadata": {},
    "outputs": [
@@ -104,7 +102,7 @@
      "output_type": "stream",
      "text": [
       "Request failed with status code: 500\n",
-      "{\"error\":\"name 'centroid_categories' is not defined\"}\n",
+      "{\"error\":\"axis 1 is out of bounds for array of dimension 1\"}\n",
       "\n"
      ]
     }
