push line remove in faiss

--- a/ai/scripts/generate_sql.ipynb
+++ b/ai/scripts/generate_sql.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "2edcbac7",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,8 @@
     "import requests\n",
     "\n",
     "# The Flask server URL\n",
-    "BASE_URL = \"http://127.0.0.1:5000/admin/evaluate-video\"\n",
+    "# BASE_URL = \"http://127.0.0.1:5000/admin/evaluate-video\"\n",
+    "BASE_URL = \"https://tiertok-ai-server.onrender.com/admin/evaluate-video\"\n",
     "\n",
     "# Example video URL\n",
     "video_url = \"b58c3991_tiktok_7480905344793791762_video.mp4\"\n",
@@ -88,12 +89,13 @@
     "        print(f\"Request failed with status code: {response.status_code}\")\n",
     "        print(response.text)\n",
     "except Exception as e:\n",
-    "    print(f\"An error occurred: {e}\")\n"
+    "    print(f\"An error occurred:{e}\")\n",
+    "    raise\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "ad292cc7",
    "metadata": {},
    "outputs": [
@@ -131,6 +133,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b7993ab0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "758fa546",
    "metadata": {},
    "outputs": [],
    "source": []
